--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,6 @@
+v5.0.901
+Sync with upstream (tempo, colour management changes), disable some more label scrolling
+
 v5.0.703 
 Due to huge CoreElec performance problems with scrolling labels, re-arrange VideoFullScreen
 Title can now take a whole line, and media codec icons are moved up and aligned right
