Progress on Switchback
Service side is on its way, with playbacks being recorded as they happen, and reloaded from disk when the service starts

--- a/staging/plugin.video.switchback/resources/language/resource.language.en_gb/strings.po
+++ b/staging/plugin.video.switchback/resources/language/resource.language.en_gb/strings.po
@@ -22,6 +22,5 @@ msgid "Some Setting Group"
 msgstr ""
 
 msgctxt "#32002"
-msgid "Some Toggle Setting"
+msgid "Maximum switchback list length"
 msgstr ""
-
