More on Switchback
Might be the most frustrating Kodi addon I've developed, sigh...

--- a/staging/script.switchback/resources/language/resource.language.en_gb/strings.po
+++ b/staging/script.switchback/resources/language/resource.language.en_gb/strings.po
@@ -18,9 +18,13 @@ msgid "General"
 msgstr ""
 
 msgctxt "#32001"
-msgid "Some Setting Group"
+msgid "Basic Settings"
 msgstr ""
 
 msgctxt "#32002"
-msgid "Maximum switchback list length"
+msgid "Maximum Switchback list length"
+msgstr ""
+
+msgctxt "#32003"
+msgid "Track Music Playbacks?"
 msgstr ""
