Switchback - add list deletes, tidy up

--- a/staging/script.switchback/resources/language/resource.language.en_gb/strings.po
+++ b/staging/script.switchback/resources/language/resource.language.en_gb/strings.po
@@ -28,3 +28,7 @@ msgstr ""
 msgctxt "#32003"
 msgid "Track Music Playbacks?"
 msgstr ""
+
+msgctxt "#32004"
+msgid "Delete from Switchback list"
+msgstr ""
