Switchback -> final prep before move to own repo for submission

--- a/staging/plugin.switchback/changelog.txt
+++ b/staging/plugin.switchback/changelog.txt
@@ -1,6 +1,6 @@
 v1.0.0
 - Initial Release
-- Supports Episodes, Movies, Songs, PVR channels
-- Does not (yet?) support: addons/pvr recording
+- Supports Episodes, Movies, Songs, PVR channels, Non-library files
+- Does not (yet?) support: addons/PVR recordings
 
 
