Skin v5.9.02 Add holiday backgrounds

--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,6 @@
+v5.0.902 
+Add holiday backgrounds
+
 v5.0.901
 Sync with upstream (tempo, colour management changes), disable some more label scrolling
 
