--- a/staging/skin.confluence.bossanova808.omega/changelog.txt
+++ b/staging/skin.confluence.bossanova808.omega/changelog.txt
@@ -1,3 +1,7 @@
+v5.0.913
+- Fix colouring of BOM now/later info
+- Add reload skin and reload keymap utilities (for b808 only)
+
 v5.0.912
 Add another holiday background
 
