--- a/staging/skin.confluence.bossanova808.piers/language/resource.language.uk_ua/strings.po
+++ b/staging/skin.confluence.bossanova808.piers/language/resource.language.uk_ua/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: KODI Main\n"
 "Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2025-07-17 15:29+0000\n"
+"PO-Revision-Date: 2025-09-26 00:44+0000\n"
 "Last-Translator: Pavlo Marianov <acid@jack.kyiv.ua>\n"
 "Language-Team: Ukrainian <https://kodi.weblate.cloud/projects/kodi-add-ons-skins/skin-confluence/uk_ua/>\n"
 "Language: uk_ua\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 5.12.2\n"
+"X-Generator: Weblate 5.13.3\n"
 
 msgctxt "Addon Summary"
 msgid "Confluence skin by Jezz_X."
@@ -39,7 +39,7 @@ msgstr "[B]НАЛАШТУВАННЯ ІГОР[/B][CR][CR]Налаштування
 
 msgctxt "#31003"
 msgid "Power options"
-msgstr "Налаштування живлення"
+msgstr "Параметри живлення"
 
 msgctxt "#31004"
 msgid "Working..."
