--- a/staging/script.jellyfin-fixer/changelog.txt
+++ b/staging/script.jellyfin-fixer/changelog.txt
@@ -1,3 +1,6 @@
+v0.0.5
+- improve logging            
+
 v0.0.4
 - Don't do anything if JF resume point only off by a small number of seconds (configurable)
 
