[SKINPATCHER] Release 0.5.4 with minor tidy-ups

--- a/staging/script.ozweather-skinpatcher/changelog.txt
+++ b/staging/script.ozweather-skinpatcher/changelog.txt
@@ -1,3 +1,6 @@
+v0.5.4
+- Remove not needed Confluence include from non Confluence style skins
+
 v0.5.3
 - Fix clobbering of min/max - thanks @benyamin-codez
 - https://github.com/bossanova808/repository.bossanova808/issues/23
